--- a/UnitofWork/UnitofWork.csproj
+++ b/UnitofWork/UnitofWork.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>UnitofWork</PackageId>
+    <PackageId>PQK.UnitOfWork</PackageId>
     <Version>1.0.7</Version>
     <Authors>pqk</Authors>
     <Description>UnitOfWork pattern.</Description>
